--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        <!-- <header class="header">
+            <div class="container">
+                <div class="header__flex">
+                    <div>Logo</div>
+                    <div>Card</div>
+                </div>
+            </div>
+        </header> -->
+        <div class="container"></div>
+    </body>
 </html>
