--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -7,14 +7,14 @@
         <title>Document</title>
     </head>
     <body>
-        <!-- <header class="header">
+        <header class="header">
             <div class="container">
                 <div class="header__flex">
                     <div>Logo</div>
                     <div>Card</div>
                 </div>
             </div>
-        </header> -->
+        </header>
         <div class="container"></div>
     </body>
 </html>
