feat: add header__logo and install font for him

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -10,7 +10,9 @@
         <header class="header">
             <div class="container">
                 <div class="header__flex">
-                    <div>Logo</div>
+                    <div class="header__logo">
+                        <h1>Revchenko store</h1>
+                    </div>
                     <div>Card</div>
                 </div>
             </div>
