feat: add header__card-logo

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -13,7 +13,14 @@
                     <div class="header__logo">
                         <h1>Revchenko store</h1>
                     </div>
-                    <div>Card</div>
+                    <div class="header__card">
+                        <svg height="30" width="30">
+                            <use
+                                class="header__card-icon"
+                                xlink:href="./assets/card-icon.svg#Layer_1"
+                            ></use>
+                        </svg>
+                    </div>
                 </div>
             </div>
         </header>
