feat: add hover-green variable

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -24,6 +24,10 @@
                 </div>
             </div>
         </header>
-        <div class="container"></div>
+        <!-- <main class="content">
+            <div class="container">
+
+            </div>
+        </main> -->
     </body>
 </html>
