feat: add _button.scss and base structure of content block

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -24,10 +24,16 @@
                 </div>
             </div>
         </header>
-        <!-- <main class="content">
+        <main class="content">
             <div class="container">
-
+                <div class="content__filter-button-container">
+                    <button class="content__filter-button button">Фильтры</button>
+                </div>
+                <div class="content__container">
+                    <div class="content__settings-container"></div>
+                    <div class="content__products-container"></div>
+                </div>
             </div>
-        </main> -->
+        </main>
     </body>
 </html>
