feat: add test logic for opening settings bar in mobile

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -27,10 +27,10 @@
         <main class="content">
             <div class="container">
                 <div class="content__filter-button-container">
-                    <button class="content__filter-button button">Фильтры</button>
+                    <button id="test" class="content__filter-button button">Фильтры</button>
                 </div>
                 <div class="content__container">
-                    <div class="content__settings-container"></div>
+                    <div id="el" class="content__settings-container"></div>
                     <div class="content__products-container"></div>
                 </div>
             </div>
