feat: add product grid template

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -31,7 +31,16 @@
                 </div>
                 <div class="content__container">
                     <div id="el" class="content__settings-container"></div>
-                    <div class="content__products-container"></div>
+                    <div class="content__products-container">
+                        <div class="product"></div>
+                        <div class="product"></div>
+                        <div class="product"></div>
+                        <div class="product"></div>
+                        <div class="product"></div>
+                        <div class="product"></div>
+                        <div class="product"></div>
+                        <div class="product"></div>
+                    </div>
                 </div>
             </div>
         </main>
