feat: add product template

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -32,14 +32,140 @@
                 <div class="content__container">
                     <div id="el" class="content__settings-container"></div>
                     <div class="content__products-container">
-                        <div class="product"></div>
-                        <div class="product"></div>
-                        <div class="product"></div>
-                        <div class="product"></div>
-                        <div class="product"></div>
-                        <div class="product"></div>
-                        <div class="product"></div>
-                        <div class="product"></div>
+                        <div class="product">
+                            <div class="product__image-container">
+                                <img
+                                    class="product__image"
+                                    src="./assets/iphone-12-test.png"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="product__description">
+                                <span class="product__manufacturer">Apple</span>
+                                <span class="product__title">Iphone 12</span>
+                                <p>Год: <span class="product__year">2021</span></p>
+                                <p>Цвет: <span class="product__color">Фиолетовый</span></p>
+                            </div>
+                            <div class="product__footer">
+                                <span class="product__price">499$</span>
+                                <button class="button">В корзину</button>
+                            </div>
+                        </div>
+
+                        <div class="product">
+                            <div class="product__image-container">
+                                <img
+                                    class="product__image"
+                                    src="./assets/iphone-12-test.png"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="product__description">
+                                <span class="product__manufacturer">Apple</span>
+                                <span class="product__title">Iphone 12</span>
+                                <p>Год: <span class="product__year">2021</span></p>
+                                <p>Цвет: <span class="product__color">Фиолетовый</span></p>
+                            </div>
+                            <div class="product__footer">
+                                <span class="product__price">499$</span>
+                                <button class="button">В корзину</button>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="product__image-container">
+                                <img
+                                    class="product__image"
+                                    src="./assets/iphone-12-test.png"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="product__description">
+                                <span class="product__manufacturer">Apple</span>
+                                <span class="product__title">Iphone 12</span>
+                                <p>Год: <span class="product__year">2021</span></p>
+                                <p>Цвет: <span class="product__color">Фиолетовый</span></p>
+                            </div>
+                            <div class="product__footer">
+                                <span class="product__price">499$</span>
+                                <button class="button">В корзину</button>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="product__image-container">
+                                <img
+                                    class="product__image"
+                                    src="./assets/iphone-12-test.png"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="product__description">
+                                <span class="product__manufacturer">Apple</span>
+                                <span class="product__title">Iphone 12</span>
+                                <p>Год: <span class="product__year">2021</span></p>
+                                <p>Цвет: <span class="product__color">Фиолетовый</span></p>
+                            </div>
+                            <div class="product__footer">
+                                <span class="product__price">499$</span>
+                                <button class="button">В корзину</button>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="product__image-container">
+                                <img
+                                    class="product__image"
+                                    src="./assets/iphone-12-test.png"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="product__description">
+                                <span class="product__manufacturer">Apple</span>
+                                <span class="product__title">Iphone 12</span>
+                                <p>Год: <span class="product__year">2021</span></p>
+                                <p>Цвет: <span class="product__color">Фиолетовый</span></p>
+                            </div>
+                            <div class="product__footer">
+                                <span class="product__price">499$</span>
+                                <button class="button">В корзину</button>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="product__image-container">
+                                <img
+                                    class="product__image"
+                                    src="./assets/iphone-12-test.png"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="product__description">
+                                <span class="product__manufacturer">Apple</span>
+                                <span class="product__title">Iphone 12</span>
+                                <p>Год: <span class="product__year">2021</span></p>
+                                <p>Цвет: <span class="product__color">Фиолетовый</span></p>
+                            </div>
+                            <div class="product__footer">
+                                <span class="product__price">499$</span>
+                                <button class="button">В корзину</button>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="product__image-container">
+                                <img
+                                    class="product__image"
+                                    src="./assets/iphone-12-test.png"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="product__description">
+                                <span class="product__manufacturer">Apple</span>
+                                <span class="product__title">Iphone 12</span>
+                                <p>Год: <span class="product__year">2021</span></p>
+                                <p>Цвет: <span class="product__color">Фиолетовый</span></p>
+                            </div>
+                            <div class="product__footer">
+                                <span class="product__price">499$</span>
+                                <button class="button">В корзину</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
