feat: add adding to card logic

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -48,7 +48,7 @@
                             </div>
                             <div class="product__footer">
                                 <span class="product__price">499$</span>
-                                <button class="button">В корзину</button>
+                                <button id="test2" class="button">В корзину</button>
                             </div>
                         </div>
 
