feat: finish remove from card method

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -20,6 +20,7 @@
                                 xlink:href="./assets/card-icon.svg#Layer_1"
                             ></use>
                         </svg>
+                        <div id="card-count"></div>
                     </div>
                 </div>
             </div>
