refactor: remove comments in index.html

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -32,205 +32,9 @@
                 </div>
                 <div class="content__container">
                     <div id="el" class="content__settings-container"></div>
-                    <div class="content__products-container">
-                        
-                    </div>
+                    <div class="content__products-container"></div>
                 </div>
             </div>
         </main>
     </body>
 </html>
-
-
-<!-- 
-<div class="product">
-    <div class="product__image-container">
-        <img
-            class="product__image"
-            src="https://mobillife.by/images/virtuemart/product/30059040b.jpg"
-            alt=""
-        />
-    </div>
-    <div class="product__description">
-        <span class="product__manufacturer">Apple</span>
-        <span class="product__title">Iphone 12</span>
-        <p>Год: <span class="product__year">2021</span></p>
-        <p>Цвет: <span class="product__color">Фиолетовый</span></p>
-    </div>
-    <div class="product__footer">
-        <span class="product__price">499$</span>
-        <button id="test2" class="button">В корзину</button>
-    </div>
-</div>
-
-<div class="product">
-    <div class="product__image-container">
-        <img
-            class="product__image"
-            src="https://mobillife.by/images/virtuemart/product/30059037b1.jpg"
-            alt=""
-        />
-    </div>
-    <div class="product__description">
-        <span class="product__manufacturer">Apple</span>
-        <span class="product__title">Iphone 12</span>
-        <p>Год: <span class="product__year">2021</span></p>
-        <p>Цвет: <span class="product__color">Фиолетовый</span></p>
-    </div>
-    <div class="product__footer">
-        <span class="product__price">499$</span>
-        <button class="button">В корзину</button>
-    </div>
-</div>
-<div class="product">
-    <div class="product__image-container">
-        <img
-            class="product__image"
-            src="https://mobillife.by/images/virtuemart/product/30052886b.jpg"
-            alt=""
-        />
-    </div>
-    <div class="product__description">
-        <span class="product__manufacturer">Apple</span>
-        <span class="product__title">Iphone 12</span>
-        <p>Год: <span class="product__year">2021</span></p>
-        <p>Цвет: <span class="product__color">Фиолетовый</span></p>
-    </div>
-    <div class="product__footer">
-        <span class="product__price">499$</span>
-        <button class="button">В корзину</button>
-    </div>
-</div>
-<div class="product">
-    <div class="product__image-container">
-        <img
-            class="product__image"
-            src="https://mobillife.by/images/virtuemart/product/22147.750x05772.jpg"
-            alt=""
-        />
-    </div>
-    <div class="product__description">
-        <span class="product__manufacturer">Apple</span>
-        <span class="product__title">Iphone 12</span>
-        <p>Год: <span class="product__year">2021</span></p>
-        <p>Цвет: <span class="product__color">Фиолетовый</span></p>
-    </div>
-    <div class="product__footer">
-        <span class="product__price">499$</span>
-        <button class="button">В корзину</button>
-    </div>
-</div>
-<div class="product">
-    <div class="product__image-container">
-        <img
-            class="product__image"
-            src="https://mobillife.by/images/virtuemart/product/218333.jpg"
-            alt=""
-        />
-    </div>
-    <div class="product__description">
-        <span class="product__manufacturer">Apple</span>
-        <span class="product__title">Iphone 12</span>
-        <p>Год: <span class="product__year">2021</span></p>
-        <p>Цвет: <span class="product__color">Фиолетовый</span></p>
-    </div>
-    <div class="product__footer">
-        <span class="product__price">499$</span>
-        <button class="button">В корзину</button>
-    </div>
-</div>
-<div class="product">
-    <div class="product__image-container">
-        <img
-            class="product__image"
-            src="https://mobillife.by/images/virtuemart/product/poco_x4_pro_5g_6gb_128gb_siniy_(mejdunarodnaya_versiya)_1.jpg"
-            alt=""
-        />
-    </div>
-    <div class="product__description">
-        <span class="product__manufacturer">Apple</span>
-        <span class="product__title">Iphone 12</span>
-        <p>Год: <span class="product__year">2021</span></p>
-        <p>Цвет: <span class="product__color">Фиолетовый</span></p>
-    </div>
-    <div class="product__footer">
-        <span class="product__price">499$</span>
-        <button class="button">В корзину</button>
-    </div>
-</div>
-<div class="product">
-    <div class="product__image-container">
-        <img
-            class="product__image"
-            src="https://mobillife.by/images/virtuemart/product/oneplus_9_8gb_128gb_arctic_sky_1.jpg"
-            alt=""
-        />
-    </div>
-    <div class="product__description">
-        <span class="product__manufacturer">Apple</span>
-        <span class="product__title">Iphone 12</span>
-        <p>Год: <span class="product__year">2021</span></p>
-        <p>Цвет: <span class="product__color">Фиолетовый</span></p>
-    </div>
-    <div class="product__footer">
-        <span class="product__price">499$</span>
-        <button class="button">В корзину</button>
-    </div>
-</div>
-<div class="product">
-    <div class="product__image-container">
-        <img
-            class="product__image"
-            src="https://mobillife.by/images/virtuemart/product/oneplus_10_pro_8gb_256gb_(izumrudnyiy_les)_174.jpg"
-            alt=""
-        />
-    </div>
-    <div class="product__description">
-        <span class="product__manufacturer">Apple</span>
-        <span class="product__title">Iphone 12</span>
-        <p>Год: <span class="product__year">2021</span></p>
-        <p>Цвет: <span class="product__color">Фиолетовый</span></p>
-    </div>
-    <div class="product__footer">
-        <span class="product__price">499$</span>
-        <button class="button">В корзину</button>
-    </div>
-</div>
-<div class="product">
-    <div class="product__image-container">
-        <img
-            class="product__image"
-            src="https://mobillife.by/images/virtuemart/product/samsung_galaxy_a13_4gb_64gb_chernyiy.jpg"
-            alt=""
-        />
-    </div>
-    <div class="product__description">
-        <span class="product__manufacturer">Apple</span>
-        <span class="product__title">Iphone 12</span>
-        <p>Год: <span class="product__year">2021</span></p>
-        <p>Цвет: <span class="product__color">Фиолетовый</span></p>
-    </div>
-    <div class="product__footer">
-        <span class="product__price">499$</span>
-        <button class="button">В корзину</button>
-    </div>
-</div>
-<div class="product">
-    <div class="product__image-container">
-        <img
-            class="product__image"
-            src="https://mobillife.by/images/virtuemart/product/samsung_galaxy_s22_ultra_5g_%D0%B3%D0%BE%D0%BB%D1%83%D0%B1%D0%BE%D0%B913.jpg"
-            alt=""
-        />
-    </div>
-    <div class="product__description">
-        <span class="product__manufacturer">Apple</span>
-        <span class="product__title">Iphone 12</span>
-        <p>Год: <span class="product__year">2021</span></p>
-        <p>Цвет: <span class="product__color">Фиолетовый</span></p>
-    </div>
-    <div class="product__footer">
-        <span class="product__price">499$</span>
-        <button class="button">В корзину</button>
-    </div>
-</div> -->
