feat: add product-root-elem id in index.html

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="content__container">
                     <div id="el" class="content__settings-container"></div>
-                    <div class="content__products-container"></div>
+                    <div id="products-root-elem" class="content__products-container"></div>
                 </div>
             </div>
         </main>
