feat: add styles for card-count

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -20,7 +20,7 @@
                                 xlink:href="./assets/card-icon.svg#Layer_1"
                             ></use>
                         </svg>
-                        <div id="card-count-root-elem"></div>
+                        <div id="card-count-root-elem" class="header__card-count"></div>
                     </div>
                 </div>
             </div>
