feat: add readme content

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -11,7 +11,7 @@
             <div class="container">
                 <div class="header__flex">
                     <div class="header__logo">
-                        <h1>Revchenko store</h1>
+                        <h1 id="tet">Revchenko store</h1>
                     </div>
                     <div class="header__card">
                         <svg height="30" width="30">
