feat: add checkboxFilter class

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -31,7 +31,7 @@
                     <button id="test" class="content__filter-button button">Фильтры</button>
                 </div>
                 <div class="content__container">
-                    <div id="el" class="content__settings-container"></div>
+                    <div id="settings-root-element" class="content__settings-container"></div>
                     <div id="products-root-elem" class="content__products-container"></div>
                 </div>
             </div>
