feat: add sidebar for mobile version

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -28,10 +28,13 @@
         <main class="content">
             <div class="container">
                 <div class="content__filter-button-container">
-                    <button id="test" class="content__filter-button button">Фильтры</button>
+                    <button id="open-filter-button" class="content__filter-button button">
+                        Фильтры
+                    </button>
                 </div>
                 <div class="content__container">
-                    <div id="settings-root-element" class="content__settings-container"></div>
+                    <div id="settings-root-element" class="content__settings-container">
+                    </div>
                     <div id="products-root-elem" class="content__products-container"></div>
                 </div>
             </div>
