feat: add reset filters logic

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -33,8 +33,8 @@
                     </button>
                 </div>
                 <div class="content__container">
-                    <div id="settings-root-element" class="content__settings-container">
-                    </div>
+                    <button id="reset">Reset filters</button>
+                    <div id="settings-root-element" class="content__settings-container"></div>
                     <div id="products-root-elem" class="content__products-container"></div>
                 </div>
             </div>
