--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -40,5 +40,7 @@
                 </div>
             </div>
         </main>
+        <div id="slider"></div>
+        <button id="test">test</button>
     </body>
 </html>
