--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="content__container">
                     <button id="reset">Reset filters</button>
-                    <input id="search" />
+                    <input id="search" autocomplete="off" />
                     <div id="settings-root-element" class="content__settings-container"></div>
                     <div id="products-root-elem" class="content__products-container"></div>
                 </div>
