feat: finish create range slider

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -41,6 +41,8 @@
             </div>
         </main>
         <div id="slider"></div>
+        <input class="skip-value-lower" />
+        <input class="skip-value-upper" />
         <button id="test">test</button>
     </body>
 </html>
