feat: add car svg

--- a/async-race/src/index.html
+++ b/async-race/src/index.html
@@ -14,5 +14,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- <svg height="30" width="30">
+      <use class="car-icon" xlink:href="./assets/car.svg#svg2"></use>
+    </svg> -->
   </body>
 </html>
